crates/formatter/tests/snapshots/snapshots__migrations__000231_provisioner_key_tags.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_keys drop column tags;
