crates/formatter/tests/snapshots/snapshots__migrations__000231_provisioner_key_tags.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_keys add column tags jsonb default '{}'::jsonb not null;
alter table provisioner_keys alter column tags drop default;
