crates/formatter/tests/snapshots/snapshots__migrations__000235_fix_notifications_group.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set "group" = E'Workspace Events'
where id = '4e19c0ac-94e1-4532-9515-d1801aa283b2';
