crates/formatter/tests/snapshots/snapshots__migrations__000236_notifications_user_deleted.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = 'f44d9314-ad03-4bc8-95d0-5cad491da6b6';
