crates/formatter/tests/snapshots/snapshots__migrations__000236_notifications_user_deleted.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into notification_templates (id,
name,
title_template,
body_template,
"group",
actions)
values
	('f44d9314-ad03-4bc8-95d0-5cad491da6b6',
	'User account deleted',
	E'User account "{{.Labels.deleted_account_name}}" deleted',
	E'Hi {{.UserName}},\n\nUser account **{{.Labels.deleted_account_name}}** has been deleted.',
	'User Events',
	'[
        {
            "label": "View accounts",
            "url": "{{ base_url }}/deployment/users?filter=status%3Aactive"
        }
    ]'::jsonb);
