crates/formatter/tests/snapshots/snapshots__migrations__000237_github_com_user_id.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users drop column github_com_user_id;
