crates/formatter/tests/snapshots/snapshots__migrations__000238_notification_preferences.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table notification_preferences (
	user_id uuid references users on delete cascade not null,
	notification_template_id uuid references notification_templates
		on delete cascade not null,
	disabled bool not null default false,
	created_at timestamp with time zone not null default CURRENT_TIMESTAMP,
	updated_at timestamp with time zone not null default CURRENT_TIMESTAMP,
	primary key (user_id, notification_template_id)
);

-- Add a new type (to be expanded upon later) which specifies the kind of notification template.
create type notification_template_kind as enum (
	'system'
);

alter table notification_templates
	-- Allow per-template notification method (enterprise only).
	add column method notification_method,
	-- Update all existing notification templates to be system templates.
	add column kind notification_template_kind default 'system'::notification_template_kind not null;
comment on column notification_templates.method is 'NULL defers to the deployment-level method';

-- No equivalent in down migration because ENUM values cannot be deleted.
alter type notification_message_status add value if not exists 'inhibited';

-- Function to prevent enqueuing notifications unnecessarily.
create or replace function inhibit_enqueue_if_disabled()
returns trigger
language plpgsql
as $$
	begin
		-- Fail the insertion if the user has disabled this notification.
		if exists (
			select 1
			from notification_preferences
			where
				disabled = true
				and user_id = NEW.user_id
				and notification_template_id = NEW.notification_template_id
		) then
			raise exception 'cannot enqueue message: user has disabled this notification';
		end if;
		return NEW;
	end;
$$;

-- Trigger to execute above function on insertion.
create trigger inhibit_enqueue_if_disabled
	before insert on notification_messages
	for each row
	execute function inhibit_enqueue_if_disabled();

-- Allow modifications to notification templates to be audited.
alter type resource_type add value if not exists 'notification_template';
